; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_control_msg.c_write_position.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_control_msg.c_write_position.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.position = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.position*)* @write_position to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_position(i32* %0, %struct.position* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.position*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.position* %1, %struct.position** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  %7 = load %struct.position*, %struct.position** %4, align 8
  %8 = getelementptr inbounds %struct.position, %struct.position* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @buffer_write32be(i32* %6, i32 %10)
  %12 = load i32*, i32** %3, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 4
  %14 = load %struct.position*, %struct.position** %4, align 8
  %15 = getelementptr inbounds %struct.position, %struct.position* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @buffer_write32be(i32* %13, i32 %17)
  %19 = load i32*, i32** %3, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 8
  %21 = load %struct.position*, %struct.position** %4, align 8
  %22 = getelementptr inbounds %struct.position, %struct.position* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @buffer_write16be(i32* %20, i32 %24)
  %26 = load i32*, i32** %3, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 10
  %28 = load %struct.position*, %struct.position** %4, align 8
  %29 = getelementptr inbounds %struct.position, %struct.position* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @buffer_write16be(i32* %27, i32 %31)
  ret void
}

declare dso_local i32 @buffer_write32be(i32*, i32) #1

declare dso_local i32 @buffer_write16be(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
